--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
     <title>2nd time Practice</title>
 </head>
 <body>
@@ -17,5 +19,6 @@
     {% else %}
     <p>No polls are available.</p>
     {% endif %}
+
 </body>
 </html>
