--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -16,7 +16,7 @@
     {% for choice in question.choice_set.all %}
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-    {% endfor %}   <!-- forloop.counter: 指for標籤已經循環多少次 -->
+    {% endfor %}   <!-- forloop.counter: 指for標籤已經循環了多少次 -->
     <input type="submit" value="Vote">
     </form>
 </body>
