--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -1,6 +1,9 @@
 {% extends 'shop/base.html' %}
+
 {% load static %}
+
 {% block content %}
+
 <div class="hero-wrap hero-bread" style="background-image: url({{ bg_6 }});">
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -11,6 +14,7 @@
 		</div>
 	</div>
 </div>
+
 <section class="ftco-section ftco-cart">
 	<div class="container">
 		<div class="row">
@@ -30,27 +34,37 @@
 						<tbody>
 						<tr class="text-center">
 							<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-                        	<td class="image-prod"><div class="img" style="background-image:url({{ product_3 }});"></div></td>
- 							<td class="product-name">
+
+							<td class="image-prod"><div class="img" style="background-image:url({{ product_3 }});"></div></td>
+
+							<td class="product-name">
 								<h3>Young Woman Wearing Dress</h3>
 								<p>Far far away, behind the word mountains, far from the countries</p>
 							</td>
+
 							<td class="price">$4.90</td>
+
 							<td class="quantity">
 								<div class="input-group mb-3">
 									<input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
 								</div>
 							</td>
+
 							<td class="total">$4.90</td>
 						</tr><!-- END TR-->
+
 						<tr class="text-center">
 							<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
+
 							<td class="image-prod"><div class="img" style="background-image:url({{ product_4 }});"></div></td>
+
 							<td class="product-name">
 								<h3>Young Woman Wearing Dress</h3>
 								<p>Far far away, behind the word mountains, far from the countries</p>
 							</td>
+
 							<td class="price">$15.70</td>
+
 							<td class="quantity">
 								<div class="input-group mb-3">
 									<input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
@@ -91,6 +105,7 @@
 		</div>
 	</div>
 </section>
+
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div class="row justify-content-center mb-3 pb-3">
@@ -213,12 +228,42 @@
 		</div>
 	</div>
 </section>
+
 <script>
 		$(document).ready(function(){
 
 		var quantitiy=0;
-@@ -432,6 +265,5 @@ <h2 class="ftco-heading-2">Have a Questions?</h2>
+		   $('.quantity-right-plus').click(function(e){
+		        
+		        // Stop acting like a button
+		        e.preventDefault();
+		        // Get the field name
+		        var quantity = parseInt($('#quantity').val());
+		        
+		        // If is not undefined
+		            
+		            $('#quantity').val(quantity + 1);
 
+		          
+		            // Increment
+		        
+		    });
+
+		     $('.quantity-left-minus').click(function(e){
+		        // Stop acting like a button
+		        e.preventDefault();
+		        // Get the field name
+		        var quantity = parseInt($('#quantity').val());
+		        
+		        // If is not undefined
+		      
+		            // Increment
+		            if(quantity>0){
+		            $('#quantity').val(quantity - 1);
+		            }
+		    });
+		    
 		});
 	</script>
+
 {% endblock %}
